fixed layout bugs #6

--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -1,7 +1,7 @@
 .product {
     width: min-content;
     max-height: 390px;
-    width: 290px;
+    width: 270px;
     flex-shrink: 0;
 
     &__img {
